--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -59,5 +59,11 @@ h1{
 	font-family: $font-family_2;
 }
 
-	
+	.section-principal{
+		.img-ruta{
+			img{
+				border-radius: 10px;
+			}
+		}
+	}
 	
